# pddl-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.githooks/: post-push
pddl-cli/: pyproject.toml
pddl-cli/src/pddl_cli/: cli.py
pddl-cli/tests/: test_cli.py
