[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pddl-cli"
version = "0.1.0"
description = "Unified PDDL command-line dispatcher: generate datasets, simulate, plan."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pddl-dataset",
    "pddl-simulator",
]

[project.scripts]
pddl-cli = "pddl_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
